--- a/plugins/dyson_pure_link.yaml.example
+++ b/plugins/dyson_pure_link.yaml.example
@@ -3,3 +3,4 @@ DYSON_SERIAL: 'Product SSID'
 DYSON_IP: 'Device IP Address'
 DYSON_PORT: 1883 # Default port
 DYSON_TYPE: 455 # Usully one of 455, 465, 475
+CONNECTIVITY_TIMEOUT: 10
